fix: attempt fix for overlapping seperators
ref: #19

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,4 +1,5 @@
 .aboutSection {
+  min-height: fit-content;
   /* 100vh - height of seperator */
   height: calc(100vh - 100px);
   background: #153084;
